--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>Title of the document</title>
 </head>
-
 <body>
+<h1>Example of header</h1>
 <p>This is an example of your site</p>
 </body>
 
