--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class = "box">
-                        <a class = "button" href="/Dashboard/dashboard.html">Sign In</a>
+                        <a class = "button" href="dashboard.html">Sign In</a>
                     </div>
                 </form>
                 <p>Forgot Password? Recover Your Account</p>
